SV now runs in server mode with the plugin.
Signed-off-by: Chris Sanders <zidane@spongepowered.org>